--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>KarlWeb</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head>
+  	<meta charset="utf-8" />
 
-<%= yield %>
+  	<!-- Uncomment to make IE8 render like IE7 -->
+  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
-</body>
+  	<!-- Set the viewport width to device width for mobile -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+
+  	<%= stylesheet_link_tag    "application" %>
+  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+ 
+<!-- Header and Nav -->
+  
+  <div class="row">
+    <div class="large-4 columns">
+      <h1>Karl Turner</h1>
+    </div>
+    <div class="large-8 columns">
+      <ul class="inline-list right">
+        <li><a class="contacts" href="http://www.codeschool.com/users/otaiga"><img class="codeschool" src="assets/codeschool.jpeg"></a></li>
+        <li><a class="contacts" href="https://twitter.com/#!/kdturner"><img src="assets/twitter.png"></a></li>
+      </ul>
+    </div>
+  </div>
+  
+  <!-- End Header and Nav -->
+  
+  
+  <div class="row">    
+    <%= yield %>
+    
+  </div>
+    
+  
+  <!-- Footer -->
+  
+  <footer class="row">
+    <div class="large-12 columns">
+      <hr />
+      <div class="row">
+        <div class="large-5 push-2 columns">
+          <ul class="inline-list right">
+            <li><a href="http://itunes.apple.com/us/app/lick-tab/id398205028?mt=8" title="Try out Lick Tab" onclick="window.open(this.href); return false;" onkeypress="w
+  indow.open(this.href); return false;"><img src="assets/licktab.png"></a></li>
+            <li><a href="http://itunes.apple.com/us/app/moneytrack/id417532525?mt=8" title="Try out MoneyTrack" onclick="window.open(this.href); return false;" onkeypres
+  s="window.open(this.href); return false;"><img src="assets/moneytrack.png"></a></li>
+            <li><a href="http://itunes.apple.com/us/app/moodcheck/id448619924?mt=8" title="Try out Mood Check" onclick="window.open(this.href); return false;" onkeypress
+  ="window.open(this.href); return false;"><img src="assets/moodcheck.png"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div> 
+  </footer>
+
+    
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
