changed image tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
     </div>
     <div class="large-8 columns">
       <ul class="inline-list right">
-        <li><a class="contacts" href="http://www.codeschool.com/users/otaiga"><img class="codeschool" src="assets/codeschool.jpeg"></a></li>
-        <li><a class="contacts" href="https://twitter.com/#!/kdturner"><img src="assets/twitter.png"></a></li>
+        <li><a class="contacts" href="http://www.codeschool.com/users/otaiga"><%= image_tag asset_path("codeschool.jpeg"), :class => "codeschool"%></a></li>
+        <li><a class="contacts" href="https://twitter.com/#!/kdturner"><%= image_tag asset_path("twitter.png") %></a></li>
       </ul>
     </div>
   </div>
@@ -54,11 +54,11 @@
         <div class="large-5 push-2 columns">
           <ul class="inline-list right">
             <li><a href="http://itunes.apple.com/us/app/lick-tab/id398205028?mt=8" title="Try out Lick Tab" onclick="window.open(this.href); return false;" onkeypress="w
-  indow.open(this.href); return false;"><img src="assets/licktab.png"></a></li>
+  indow.open(this.href); return false;"><%= image_tag asset_path("licktab.png") %></a></li>
             <li><a href="http://itunes.apple.com/us/app/moneytrack/id417532525?mt=8" title="Try out MoneyTrack" onclick="window.open(this.href); return false;" onkeypres
-  s="window.open(this.href); return false;"><img src="assets/moneytrack.png"></a></li>
+  s="window.open(this.href); return false;"><%= image_tag asset_path("moneytrack.png") %></a></li>
             <li><a href="http://itunes.apple.com/us/app/moodcheck/id448619924?mt=8" title="Try out Mood Check" onclick="window.open(this.href); return false;" onkeypress
-  ="window.open(this.href); return false;"><img src="assets/moodcheck.png"></a></li>
+  ="window.open(this.href); return false;"><%= image_tag asset_path("moodcheck.png") %></a></li>
           </ul>
         </div>
       </div>
