--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,19 +4,19 @@
       
       <ul data-orbit>
         <li>
-          <img src="assets/MoneyT.jpg"/>
+          <%= image_tag asset_path("MoneyT.jpg")%>
           <div class="orbit-caption">
             Simple and easy to use log application for either keeping track of money saved or money spent.
           </div>
         </li>
         <li>
-          <img src="assets/LickT.jpg" />
+          <%= image_tag asset_path("LickT.jpg")%>
           <div class="orbit-caption">
             Just enter a guitar riff and create the Tab in plain text, then you can copy the text, paste into notepad or email it to yourself and other band members
           </div>
         </li>
         <li>
-          <img src="assets/MoodC.jpg"/>
+          <%= image_tag asset_path("MoodC.jpg")%>
           <div class="orbit-caption">
             MoodCheck is a mood capturing and logging application. Use MoodCheck to see how you've been feeling over a period of time.
           </div>
